Finalize HTML Sanitizing